<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MultiROM Manager</string>
    <string name="root_error">Can\'t get root access!</string>
    <string name="mr_error">MultiROM not found!</string>
    <string name="check_root">Checking for root access</string>
    <string name="check_multirom">Checking for MultiROM</string>
    <string name="error">Error</string>
    <string name="exit">Exit</string>
    <string name="bmgr_conf">Boot Manager configuration</string>
    <string name="timezone">Timezone</string>
    <string name="timezone_sum">How many hours should be added or removed from GMT</string>
    <string name="show_seconds">Show Seconds</string>
    <string name="show_seconds_sum">Hide or show seconds in Boot manager</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_sum">How long will boot manager wait before automatically booting from internal memory</string>
    <string name="touch_ui">Touch UI</string>
    <string name="touch_ui_sum">Enable or disable touch controls</string>
    <string name="conf_w_error">Could not save configuration file!</string>
    <string name="conf_w_succes">Configuration successfully saved</string>
    <string name="error_folder">Couldn\'t find MultiROM folder!</string>
    <string name="error_backup_empty">Backup folder is empty</string>
    <string name="size">Size:</string>
    <string name="rename">Rename</string>
    <string name="rename_back">Rename backup</string>
    <string name="wrong_name">Name can only contain letters, numbers, -, _, | and #</string>
    <string name="renamed">Rename successful, reloading backups...</string>
    <string name="renamed_error">Rename failed!</string>
    <string name="backups_wait">Wait for backups to load...</string>
    <string name="working">Working...</string>
    <string name="reload">Reload</string>
    <string name="select">Select option</string>
    <string name="erased">ROM successfully erased</string>
    <string name="erased_error">Error while erasing ROM!</string>
    <string name="main_not_found">Active ROM not found, setting this one as active...</string>
    <string name="switched">ROMs successfully switched!</string>
    <string name="switched_e_move">Can\'t move active ROM to backup!</string>
    <string name="switched_e_move2">Can\'t move ROM to active folder!</string>
    <string name="switched_e_erase">Can\'t erase active ROM folder!</string>
    <string name="unknown_version"> - unknown version</string>
    <string name="move_act">Move active ROM to backup</string>
    <string name="no_active">No active ROM found</string>
    <string name="updater">Updater</string>
    <string name="down_manifest">Downloading manifest</string>
    <string name="down_pack">Downloading package</string>
    <string name="down_manifest_error">Couldn\'t download manifest!</string>
    <string name="down_pack_error">Couldn\'t download package!</string>
    <string name="decompress">Decompressing package</string>
    <string name="update_complete">Update complete! You should reboot your phone</string>
    <string name="mktmp_fail">Couldn\'t create /tmp folder!</string>
    <string name="flash_fail">Couldn\'t flash new boot img, recovering old one!</string>
    <string name="exec_package">Executing update script</string>
    <string name="update">"Update"</string>
    <string name="current_version">Current version:</string>
    <string name="newest_version">Newest version:</string>
    <string name="no_update">No update available</string>
    <string name="press_update">Press update to begin\nWARNING: There must be at least 15MB of free space in /data</string>
    <string name="update_wait">Please wait until update finishes</string>
    <string name="select_recovery">Select recovery</string>
    <string name="rec_down_err">Couldn\'t download recovery!</string>
    <string name="rec_down">Downloading recovery</string>
    <string name="rec_flash">Flashing recovery</string>
    <string name="rec_flash_err">Error while flashing recovery!</string>
    <string name="reboot">Complete, rebooting phone</string>
    <string name="unzip_error">Couldn\'t extract package! There must be at least 15mb of free space in /data.</string>
    <string name="reload_mr">Refresh MultiROM status</string>
    <string name="reboot_menu">Reboot</string>
    <string name="reboot_choose">Choose mode</string>
    <string name="rebooting">Rebooting phone...</string>
    <string name="device">Device:</string>
    <string name="no_install_rec">Do not install</string>
    <string name="app_check">Checking for app update</string>
    <string name="app_check_err">Couldn\'t download info from server!</string>
    <string name="update_avail">There is an update available for MultiROM Mgr app. It is recommended to install it before using updater.</string>
    <string name="install">Download update</string>
    <string name="no_thanks">No, thanks</string>
    <string name="tetris_max">Tetris high score</string>
    <string name="tetris_max_sum">Your high score:</string>
    <string name="reset">Reset</string>
    <string name="tetris_dialog">Do you wish to reset your high score?</string>
    <string name="reset_high_score">Reset high score</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_sum">Set display brightness</string>
    <string name="default_boot">Boot location</string>
    <string name="default_boot_sum">Set default boot location</string>
    <string name="default_boot_sd">ROM from SD card</string>
    <string name="default_boot_sd_dis">This option is only available when SD card is default boot location</string>
    <string name="default_boot_sd_active">Current active ROM</string>
    <string name="kill_android">Back to Boot Manager</string>
    <string name="charger_auto">Automatically show charger</string>
    <string name="charger_auto_sum">Shows charger screen instead of boot manager\'s main menu when the phone is turned on by plugging-in the USB cable</string>
    <string name="charger_lg">Disable LG\'s charger screen</string>
    <string name="charger_lg_sum">Disables LG\'s charger screen, which normally appears when the phone is turned on by plugging in the USB cable</string>
    
    <string-array name="backup_options">
        <item>Switch with active</item>
        <item>Erase</item>
    </string-array>
    
    <string-array name="reboot_options">
        <item>Normal</item>
        <item>Recovery</item>
        <item>Bootloader</item>
    </string-array>

    <string-array name="list_titles_installed">
        <item>Configure Boot Manager</item>
        <item>Manage backups</item>
        <item>MultiROM</item>
        <item>Info &amp; changelog</item>
    </string-array>
    <string-array name="list_summaries_installed">
        <item>Set timezone, default timeout and more</item>
        <item>You can rename, delete and move backups</item>
        <item>Tap to check for update</item>
        <item>Tap to enter XDA thread</item>
    </string-array>
    
    <string-array name="list_titles_not_in">
        <item>MultiROM not installed or not found</item>
        <item>Info &amp; changelog</item>
    </string-array>
    <string-array name="list_summaries_not_in">
        <item>Tap to install via this app</item>
        <item>Tap to enter XDA thread</item>
    </string-array>
    
    <string-array name="default_boot_entries">
        <item>Internal memory</item>
        <item>SD card</item>
    </string-array>
    
    <string-array name="default_boot_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>